<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.avanza.astrix</groupId>
	<artifactId>astrix-parent</artifactId>
	<version>2.0.7-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>${project.artifactId}</name>
	<description>${project.artifactId}</description>
	<url>https://github.com/AvanzaBank/astrix</url>
	<modules>
		<module>astrix-core</module>
		<module>astrix-gs</module>
		<module>astrix-context</module>
		<module>astrix-versioning</module>
		<module>astrix-fault-tolerance</module>
		<module>astrix-service-registry</module>
		<module>astrix-integration-tests</module>
		<module>astrix-service-registry-pu</module>
		<module>astrix-test-util</module>
		<module>astrix-spring</module>
		<module>astrix-http</module>
		<module>astrix-reactor</module>
		<module>astrix-remoting</module>
		<module>examples</module>
		<module>doc-snippets</module>
		<module>tutorial</module>
		<module>astrix-all</module>
		<module>astrix-bom</module>
		<module>astrix-modules</module>
		<module>astrix-metrics</module>
		<module>astrix-contracts</module>
		<module>astrix-netty-remoting</module>
		<module>astrix-test-support-common</module>
		<module>astrix-test-support-junit4</module>
		<module>astrix-test-support-junit5</module>
	</modules>
	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Elias Lindholm</name>
			<email>elias.lindholm@avanza.se</email>
			<organization>Avanza</organization>
			<organizationUrl>https://github.com/AvanzaBank</organizationUrl>
		</developer>
  	</developers>
	<scm>
	  <connection>scm:git:git@github.com:AvanzaBank/astrix.git</connection>
	  <developerConnection>scm:git:git@github.com:AvanzaBank/astrix.git</developerConnection>
	  <url>git@github.com:AvanzaBank/astrix.git</url>
	</scm>
	<repositories>
		<repository>
			<id>gigaspaces</id>
			<name>GigaSpaces</name>
			<url>https://gigaspaces-maven-repository-eu.s3.amazonaws.com/</url>
		</repository>
	</repositories>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<profiles>
		<profile>
			<id>release</id>
			<build>
				<!--  javadoc, source and gpg plugin from above -->
				<!-- All artifacts deployed to the central repository must be signed -->
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven-javadoc-plugin.version}</version>
						<configuration>
							<!-- TODO: Remove failOnError once all Javadoc has been fixed -->
							<failOnError>false</failOnError>
							<excludePackageNames>lunch*:se*:tutorial*:runners*:com.avanza.astrix.integration.tests*
							</excludePackageNames>
							<aggregate>true</aggregate>
							<show>public</show>
							<nohelp>true</nohelp>
							<header>Astrix Framework ${project.version}</header>
							<footer>Astrix Framework ${project.version}</footer>
							<doctitle>Astrix Framework ${project.version}</doctitle>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<properties>
		<!-- -Xdoclint:NONE ignores validation errors in javadoc -->
		<additionalparam>-Xdoclint:none</additionalparam>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>

		<spring-boot.version>2.6.7</spring-boot.version>
		<gigaspaces.version>16.1.1</gigaspaces.version>
		<hystrix.version>1.5.18</hystrix.version>
		<archaius.version>0.4.1</archaius.version>
		<lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
		<mimer-config.version>0.0.9</mimer-config.version>
		<hystrix-multiconfig.version>0.0.3</hystrix-multiconfig.version>
		<gs-test.version>2.1.7</gs-test.version>

		<!-- Plugins -->
		<maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
		<maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
		<maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
		<maven-compiler-plugin.version>3.10.0</maven-compiler-plugin.version>
		<maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
		<maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
		<maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
		<maven-release-plugin.version>3.0.0-M4</maven-release-plugin.version>
		<maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
		<maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
		<maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
		<maven-source-plugin.version>3.2.0</maven-source-plugin.version>
		<maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
		<maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
		<maven-failsafe-plugin.version>3.0.0-M7</maven-failsafe-plugin.version>
		<maven-enforcer-plugin.version>3.0.0</maven-enforcer-plugin.version>
		<maven-scm-plugin.version>1.11.2</maven-scm-plugin.version>
		<exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
		<versions-maven-plugin.version>2.8.1</versions-maven-plugin.version>
		<maven-site-plugin.version>3.9.1</maven-site-plugin.version>
		<license-maven-plugin.version>2.11</license-maven-plugin.version>
		<maven-scm-publish-plugin.version>3.0.0</maven-scm-publish-plugin.version>
		<nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
		<maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
	</properties>

	<dependencyManagement>
		<!-- Third party dependencies -->
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.google.code.findbugs</groupId>
				<artifactId>jsr305</artifactId>
				<version>3.0.2</version>
			</dependency>

			<!-- Reflections for annotation scanning-->
			<dependency>
				<groupId>org.reflections</groupId>
				<artifactId>reflections</artifactId>
				<version>0.10.2</version>
			</dependency>
			
			<dependency>
				<groupId>org.gigaspaces</groupId>
				<artifactId>xap-openspaces</artifactId>
				<version>${gigaspaces.version}</version>
 				<exclusions>
					<exclusion>
						<artifactId>*</artifactId>
						<groupId>*</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.gigaspaces</groupId>
				<artifactId>xap-datagrid</artifactId>
				<version>${gigaspaces.version}</version>
				<exclusions>
					<exclusion>
						<groupId>com.github.oshi</groupId>
						<artifactId>oshi-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>*</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.xerial</groupId>
						<artifactId>sqlite-jdbc</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.gigaspaces</groupId>
				<artifactId>xap-near-cache-spring</artifactId>
				<version>${gigaspaces.version}</version>
			</dependency>

			<dependency>
				<groupId>com.netflix.hystrix</groupId>
				<artifactId>hystrix-core</artifactId>
				<version>${hystrix.version}</version>
			</dependency>
			<dependency>
				<groupId>com.netflix.archaius</groupId>
				<artifactId>archaius-core</artifactId>
				<version>${archaius.version}</version>
			</dependency>
			<dependency>
				<groupId>com.avanza.gs</groupId>
				<artifactId>gs-test-junit4</artifactId>
				<version>${gs-test.version}</version>
			</dependency>
			<dependency>
				<groupId>com.avanza.mimer</groupId>
				<artifactId>mimer-config</artifactId>
				<version>${mimer-config.version}</version>
			</dependency>
			<dependency>
				<groupId>com.avanza.hystrix</groupId>
				<artifactId>hystrix-multiconfig</artifactId>
				<version>${hystrix-multiconfig.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<!-- define version numbers for all core plugins to have deterministic 
					build -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>${maven-shade-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven-assembly-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${maven-clean-plugin.version}</version>
				</plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${maven-dependency-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven-deploy-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>${maven-install-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven-jar-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven-javadoc-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>${maven-plugin-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>${maven-release-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>${maven-site-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven-source-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>${maven-failsafe-plugin.version}</version>
					<configuration>
						<argLine>--illegal-access=permit</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>${versions-maven-plugin.version}</version>
					<configuration>
						<generateBackupPoms>false</generateBackupPoms>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>${exec-maven-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>${maven-enforcer-plugin.version}</version>
					<configuration>
						<rules>
							<requireMavenVersion>
								<version>[3.0.4,)</version>
							</requireMavenVersion>
						</rules>
					</configuration>
				</plugin>
				<plugin>
				    <groupId>com.mycila</groupId>
				    <artifactId>license-maven-plugin</artifactId>
				    <version>${license-maven-plugin.version}</version>
					<configuration>
						<header>src/license/apache2.txt</header>
						<properties>
							<owner>Avanza Bank AB</owner>
							<inceptionYear>2014</inceptionYear>
							<project.inceptionYear>2014</project.inceptionYear>
						</properties>
						<mapping>
    						<java>SLASHSTAR_STYLE</java>
						</mapping>
						<includes>
							<include>**/*.java</include>
						</includes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-scm-plugin</artifactId>
					<version>${maven-scm-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-scm-publish-plugin</artifactId>
					<version>${maven-scm-publish-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>${nexus-staging-maven-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>${maven-gpg-plugin.version}</version>
				</plugin>

			</plugins>
		</pluginManagement>
		<plugins>
			<!-- Set default Java source/target -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>11</release>
					<encoding>${project.build.sourceEncoding}</encoding>
					<showDeprecation>true</showDeprecation>
					<failOnWarning>true</failOnWarning>
				</configuration>
			</plugin>

			<!-- Configures jar creation and manifest contents -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>

			<!-- This plugin makes sure that a source jar is always built together
				with the binary jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce</id>
						<phase>validate</phase>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>[3.0.4,)</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- TODO: Configuration of the versions plugin, so that only astrix
				version numbers are considered -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<configuration>
					<includes>
						<include>com.avanza.*</include>
					</includes>
					<groupId>com.avanza.*</groupId>
					<artifactId>*</artifactId>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-scm-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/Test*.java</include>
						<include>**/*Test.java</include>
						<include>**/*TestCase.java</include>
						<include>**/*Tests.java</include>
					</includes>
					<systemPropertyVariables>
						<!--
						-Djava.net.preferIPv4Stack=true is set since embedded spaces take ages to start on some
						developer machines without it. See also:
						http://stackoverflow.com/questions/30997298/why-is-multicastsocket-setnetworkinterface-much-slower-using-java-8-runtime
						-->
						<java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
						<!--
						Disable GS use of Oshi for detecting machine architecture and operating system
						because the version (3.13.1) used by GS 14.5 does not work with macOS aarch
						-->
						<com.gs.oshi.enabled>false</com.gs.oshi.enabled>
					</systemPropertyVariables>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-scm-publish-plugin</artifactId>
				<configuration>
					<checkoutDirectory>${project.build.directory}/scmpublish</checkoutDirectory>
					<checkinComment>Publishing javadoc for ${project.artifactId}:${project.version}</checkinComment>
					<content>${project.reporting.outputDirectory}/apidocs</content>
					<skipDeletedFiles>true</skipDeletedFiles>
					<pubScmUrl>scm:git:git@github.com:AvanzaBank/astrix.git</pubScmUrl>
					<scmBranch>gh-pages</scmBranch> <!-- branch with static site -->
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
